[tool.poetry]
name = "personalized-real-estate-agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
langchain = "^0.3.12"
ipykernel = "^6.29.5"
langchain-community = "^0.3.12"
langchain-core = "^0.3.26"
langchain-openai = "^0.2.12"
chromadb = "^0.5.23"
onnxruntime = "^1.20.1"
openai = "^1.58.1"
langchain-chroma = "^0.1.4"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
